fix gallery on mobile

--- a/styles.css
+++ b/styles.css
@@ -408,7 +408,6 @@ h4 {
   margin-top:0px;
   max-height: 680px;
   overflow: hidden;
-  /* background-color: rgb(236, 228, 216); */
   margin-bottom:20px;
 }
 
@@ -433,12 +432,13 @@ h4 {
 }
 
 .photo-row-wide {
-  margin-left:-30px;
-  margin-right:-30px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  width: 1500px;
   justify-content: center;
-  max-height: 680px;
-  overflow: hidden;
 }
 
 .photo-wide {
